project2/spl-spec/my_test/test_11912013_11.spl
struct Man
{
  int name;
  int height;
};
int compare1(int x, int y)
{
  if (x > y)
    return 1;
  else if (y > x) 
    return -1;
  else {
    return 0;
  }
}
int test_2_r11(int i, int m, int n)
{
  struct Man man;
  if (i == 0)
    return compare1(m, n);
  else
  {
    return man(m, n);
  }
}